[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/icons/icon_128_add.svg" type="Texture" id=1]
[ext_resource path="res://components/dashboard/new_widget_popup/filter_widget.gd" type="Script" id=2]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="FilterWidget" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1304.0
margin_bottom = -1008.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 616.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_constants/separation = 1

[node name="Headline" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 616.0
margin_bottom = 33.0

[node name="FilterLabel" type="Label" parent="VBoxContainer/Headline"]
margin_top = 6.0
margin_right = 588.0
margin_bottom = 26.0
size_flags_horizontal = 3
theme_type_variation = "LabelBold"
text = "Filters"

[node name="AddFilterButton" parent="VBoxContainer/Headline" instance=ExtResource( 4 )]
margin_left = 592.0
margin_right = 616.0
rect_min_size = Vector2( 24, 33 )
icon_tex = ExtResource( 1 )
icon_margin = 1

[node name="Margin" type="MarginContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 616.0
margin_bottom = 34.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 10
custom_constants/margin_bottom = 0

[node name="FilterContainer" type="VBoxContainer" parent="VBoxContainer/Margin"]
margin_left = 10.0
margin_right = 616.0
custom_constants/separation = 1

[node name="UpdateDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="pressed" from="VBoxContainer/Headline/AddFilterButton" to="." method="_on_AddFilterButton_pressed"]
[connection signal="timeout" from="UpdateDelay" to="." method="_on_UpdateDelay_timeout"]
